[gd_scene load_steps=4 format=3 uid="uid://biso3vc2oybv1"]

[ext_resource type="Script" path="res://Langdocs/prog_52a_func.gd" id="1_jtcjm"]
[ext_resource type="Theme" uid="uid://2sh8kniwmbuq" path="res://Big_Font.tres" id="2_l6d4j"]

[sub_resource type="LabelSettings" id="LabelSettings_m0q1k"]
font_size = 38

[node name="prog52aFunc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtcjm")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 544.0
offset_bottom = 71.0
text = "Length:"
label_settings = SubResource("LabelSettings_m0q1k")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 92.0
offset_right = 537.0
offset_bottom = 145.0
text = "Width:"
label_settings = SubResource("LabelSettings_m0q1k")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 201.0
offset_right = 1122.0
offset_bottom = 497.0
label_settings = SubResource("LabelSettings_m0q1k")

[node name="linLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 19.0
offset_right = 892.0
offset_bottom = 81.0

[node name="linWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 95.0
offset_right = 885.0
offset_bottom = 157.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 515.0
offset_right = 225.0
offset_bottom = 640.0
theme = ExtResource("2_l6d4j")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 515.0
offset_right = 658.0
offset_bottom = 640.0
theme = ExtResource("2_l6d4j")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 933.0
offset_top = 515.0
offset_right = 1146.0
offset_bottom = 640.0
theme = ExtResource("2_l6d4j")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
